--- a/src/pages/step-one/step-one.html
+++ b/src/pages/step-one/step-one.html
@@ -254,13 +254,13 @@
           <ion-option value="Beige">{{ 'lbl_beige' | translate }}</ion-option>
           <ion-option value="Black">{{ 'lbl_black' | translate }}</ion-option>
           <ion-option value="Blue">{{ 'lbl_blue' | translate }}</ion-option>
-          <ion-option value="Bordeaux">{{ 'lbl_bordeaux' | translate }}</ion-option>
+          <ion-option value="Burgundy">{{ 'lbl_bordeaux' | translate }}</ion-option>
           <ion-option value="Brown">{{ 'lbl_brown' | translate }}</ion-option>
           <ion-option value="Gold">{{ 'lbl_gold' | translate }}</ion-option>
           <ion-option value="Green">{{ 'lbl_green' | translate }}</ion-option>
           <ion-option value="Grey">{{ 'lbl_grey' | translate }}</ion-option>
           <ion-option value="Orange">{{ 'lbl_orange' | translate }}</ion-option>
-          <ion-option value="Other">{{ 'lbl_exterior_color_others' | translate }}</ion-option>
+          <ion-option value="Altro">{{ 'lbl_Altro' | translate }}</ion-option>
           <ion-option value="Pink">{{ 'lbl_pink' | translate }}</ion-option>
           <ion-option value="Red">{{ 'lbl_red' | translate }}</ion-option>
           <ion-option value="Silver">{{ 'lbl_silver' | translate }}</ion-option>
@@ -268,6 +268,12 @@
           <ion-option value="Violet">{{ 'lbl_violet' | translate }}</ion-option>
           <ion-option value="White">{{ 'lbl_White' | translate }}</ion-option>
           <ion-option value="Yellow">{{ 'lbl_yellow' | translate }}</ion-option>
+          <ion-option value="Bubble effect">{{ 'lbl_bubble_effect' | translate }}</ion-option>
+          <ion-option value="Individual paint">{{ 'lbl_individual_paint' | translate }}</ion-option>
+          <ion-option value="Matt paint">{{ 'lbl_matt_paint' | translate }}</ion-option>
+          <ion-option value="Metallic">{{ 'lbl_mettalic' | translate }}</ion-option>
+          <ion-option value="Solid paint">{{ 'lbl_solid_paint' | translate }}</ion-option>
+          <ion-option value="Other">{{ 'lbl_exterior_color_others' | translate }}</ion-option>
         </ion-select>
       </ion-item>
 
